add styling to shapes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <link rel="stylesheet" href="./site.css">
   </head>
   <body>
-    <section>
+    <section class="container">
       <div></div>
       <div></div>
       <div class="small"></div>
     </section>
 
-    <section>
-      <div class="circle"></div>
+    <section id="container-for-circles">
+      <div class="circle container">
+        <p>Here are words</p>
+      </div>
       <div class="circle small"></div>
       <div class="circle small"></div>
     </section>
